add accounts service unit tests
